Primitive-only foreign library mapping, with `User32` implementation example