@@ -1,29 +1,35 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-
 plugins {
-    kotlin("jvm") version "1.7.21"
+    kotlin("jvm")
     application
 }
 
 group = "org.jire.easyffm"
-version = "1.0-SNAPSHOT"
-
-repositories {
-    mavenCentral()
-}
+version = "0.1.0-SNAPSHOT"
 
 dependencies {
-    testImplementation(kotlin("test"))
-}
-
-tasks.test {
-    useJUnitPlatform()
-}
-
-tasks.withType<KotlinCompile> {
-    kotlinOptions.jvmTarget = "1.8"
+    implementation("org.javassist:javassist:3.29.2-GA")
 }
 
 application {
-    mainClass.set("MainKt")
+    mainClass.set("org.jire.easyffm.Test")
+    applicationDefaultJvmArgs += arrayOf(
+        "--enable-preview",
+        "--enable-native-access=ALL-UNNAMED",
+
+        "--add-opens=java.base/java.lang=ALL-UNNAMED"
+    )
+}
+
+kotlin {
+    jvmToolchain(19)
+}
+
+tasks.compileKotlin {
+    compilerOptions {
+        freeCompilerArgs.add("-Xjvm-default=all")
+    }
+}
+
+tasks.compileJava {
+    options.compilerArgs.add("--enable-preview")
 }
